# vers-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  package-lock.json
devops/: README.md
src/: main.rs
tests/: cli.rs
