[package]
name = "vers-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.3", features = ["derive"] }
json = "0.12.4"
semver = { version = "1.0.22", features = ["serde"] }
serde = "1.0.200"
serde_json = "1.0.116"
serde_toml = "0.0.1"
toml = "0.8.12"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
