[package]
name = "vers-cli"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tools for bumping and parsing version numbers"
license-file = "LICENSE"
readme = "README.md"
authors = ["Lorenzo Panieri"]
repository = "https://github.com/PanieriLorenzo/vers-cli"
keywords = ["version", "versioning", "semantic", "semver", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.3", features = ["derive"] }
json = "0.12.4"
semver = { version = "1.0.22", features = ["serde"] }
serde = "1.0.200"
serde_json = "1.0.116"
serde_toml = "0.0.1"
toml = "0.8.12"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
